--- a/TimberjackWebsite/vue/index.html
+++ b/TimberjackWebsite/vue/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/0da43838df.js" crossorigin="anonymous"></script>
     <title>Timberjack Trees</title>
     <script type="module" src="/src/main.js"></script>
   </head>
@@ -19,3 +20,9 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+  <style>
+  body{
+    background-color:rgb(244, 240, 224);
+  }
+  </style>
