home styled a bit

--- a/TimberjackWebsite/vue2/index.html
+++ b/TimberjackWebsite/vue2/index.html
@@ -23,6 +23,12 @@
 
   <style>
   body{
-    background-color:rgb(244, 240, 224);
+    /* background-color:rgb(244, 240, 224); */
+    background-image: url("/img/background2.jpg");
+    background-attachment: fixed;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
   }
   </style>
