--- a/TimberjackWebsite/vue2/index.html
+++ b/TimberjackWebsite/vue2/index.html
@@ -29,6 +29,9 @@
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
-    
+    margin-top:5%;
+    margin-bottom:5%;
+    font-family: "Rockwell Extra Bold";
+    font-size: 120%;
   }
   </style>
