started mobile layout

--- a/TimberjackWebsite/vue2/index.html
+++ b/TimberjackWebsite/vue2/index.html
@@ -34,4 +34,19 @@
     font-family: "Rockwell Extra Bold";
     font-size: 120%;
   }
+  @media screen and (max-width: 800px) {
+    body{
+    /* background-color:rgb(244, 240, 224); */
+    background-image: url("/img/background2.jpg");
+    background-attachment: fixed;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top:25%;
+    margin-bottom:5%;
+    font-family: "Rockwell Extra Bold";
+    font-size: 100%;
+  }
+
+}
   </style>
