--- a/Wyrmspan/vue/index.html
+++ b/Wyrmspan/vue/index.html
@@ -19,3 +19,13 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body{
+    background-image: url("/img/background.jpg");
+    background-attachment: fixed;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
