some modification for netlify

--- a/TimberjackWebsite/vue2/index.html
+++ b/TimberjackWebsite/vue2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0da43838df.js" crossorigin="anonymous"></script>
-    <title>Timberjack Trees</title>
+    <title>TimberJack Tree Services</title>
     <script type="module" src="/src/main.js"></script>
   </head>
   <body>
@@ -31,7 +31,7 @@
     background-size: cover;
     margin-top:5%;
     margin-bottom:5%;
-    font-family: "Rockwell Extra Bold";
+    font-family:'Times New Roman', Times, serif;
     font-size: 120%;
   }
   @media screen and (max-width: 800px) {
@@ -44,7 +44,7 @@
     background-size: cover;
     margin-top:25%;
     margin-bottom:5%;
-    font-family: "Rockwell Extra Bold";
+    font-family:'Times New Roman', Times, serif;
     font-size: 100%;
   }
 
