TJ: fixed title services to service

--- a/TimberjackWebsite/vue2/index.html
+++ b/TimberjackWebsite/vue2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0da43838df.js" crossorigin="anonymous"></script>
-    <title>TimberJack Tree Services</title>
+    <title>TimberJack Tree Service</title>
     <script type="module" src="/src/main.js"></script>
   </head>
   <body>
